--- a/about.html
+++ b/about.html
@@ -67,15 +67,51 @@
                 <td>TableTennis</td>
             </tr>
         </table>
-    </div> <br> <br> <br>
+    </div> <br> <br> <br> <br>
 
-    <p style="text-align: center;">In patnership with: </p> <br>
+    <h3 style="text-align: center;">Trendings news, upcoming events</h3>
 
-    <img src="img/ball.jpg" height="100px" width="230px">
-    <img src="img/ball.jpg" height="100px" width="230px">
-    <img src="img/ball.jpg" height="100px" width="230px">
-    <img src="img/ball.jpg" height="100px" width="230px">
-    <img src="img/ball.jpg" height="100px" width="230px">
+    <br>
+
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <img src="img/ball.jpg" alt="Sports Dep" style="width:100%">
+                <div class="container">
+                    <h2>Trends</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita minima eligendi nulla quaerat
+                        dignissimos rerum et soluta nobis, saepe non earum? Itaque deleniti non est.
+                    </p>
+                    <p> <a href="dep.html" target="_blank"> <button class="button">More</button> </a> </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="img/ball.jpg" alt="About" style="width:100%">
+                <div class="container">
+                    <h2>News</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis porro adipisci inventore! Pariatur
+                        culpa et nemo, sunt dolore inventore, eveniet unde dolores repellendus minus autem.</p>
+                    <p> <a href="about.html" target="_blank"> <button class="button">More</button> </a> </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="img/ball.jpg" alt="Reach Us" style="width:100%">
+                <div class="container">
+                    <h2>Competitions</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni ea fugiat libero! Voluptate sunt
+                        dicta omnis labore, perspiciatis architecto, eum id corporis perferendis nihil dignissimos.</p>
+                    <p> <a href="contact.html" target="_blank"> <button class="button">More</button> </a> </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="footer">
         <h3>&#169 Sports Website 2022 | Designed by Mumiak</h3>
